# MPC2000-File-Converter

./: .gitignore  Akai File Formats.txt  CMakeLists.txt  License.txt  README.md  byte_utils.cpp  convert16bit_wav2snd.cpp  convert_any_wav2snd.cpp  convert_wav_float.cpp  converter.cpp  converter_16bit.cpp  converter_wav_16bit.cpp  main.cpp  read_snd.cpp  read_wav.cpp  read_wav_pcm.cpp  read_wav_pcm_16bit.cpp  snd.cpp  snd.h  snd2wav.cpp  wav.h  wav2snd.cpp
include/: CMakeLists.txt  byte_utils.h  converter.cpp  converter.h  read_wav_pcm_16bit.cpp  snd2wav.cpp
